--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -31,41 +31,36 @@
                 <mat-icon>person</mat-icon> <span class="d-inline-block ml-3">Users</span>
             </a>
         </li>
-        <li routerLinkActive="subOpen" class="have_submenu" [class.subOpen]="accoutnOpen">
-            <a href="javascript:;" (click)="openAccountMenu()" matRipple [matRippleUnbounded]="false">
+        <li routerLinkActive="subOpen" class="have_submenu">
+            <a href="javascript:;"  routerLink="/admin/account" (click)="openAccountMenu()" matRipple [matRippleUnbounded]="false">
                 <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Account </span>
                 <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
             </a>
             <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/account/dashbord" matRipple>
+                    <a href="javascript:;" routerLink="/admin/account/dashboard" matRipple>
                         Dashbord
                     </a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/account/transactionlist" matRipple>
-                        Transaction List
+                    <a href="javascript:;" routerLink="/admin/account/transaction" matRipple>
+                        Transactions
                     </a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/account/make-transaction" matRipple>
-                        Make Transaction
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/account/account" matRipple>
-                        Account
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/account/report" matRipple>
+                    <a href="javascript:;" routerLink="/admin/account/reports" matRipple>
                         Reports
+                    </a>
+                </li>
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/account/master" matRipple>
+                        Masters
                     </a>
                 </li>
             </ul>
         </li>
-        <li routerLinkActive="subOpen" class="have_submenu" [class.subOpen]="settingOpen">
-            <a href="javascript:;" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
+        <li routerLinkActive="subOpen" class="have_submenu">
+            <a href="javascript:;" routerLink="/admin/settings" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
                 <mat-icon>settings</mat-icon> <span class="d-inline-block ml-3">Setting </span>
                 <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
             </a>
