--- a/src/app/admin/account/ac-shared/ac-layout/ac-layout.component.html
+++ b/src/app/admin/account/ac-shared/ac-layout/ac-layout.component.html
@@ -6,10 +6,10 @@
                 <mat-icon>menu</mat-icon>
             </button>
         </div>
-        <ul class="inner_sub_menu">
-            <li><a href="javascript:;" routerLink='/admin/account/master/ledger'>Ledger Account</a></li>
-            <li><a href="javascript:;" routerLink='/admin/account/master/inventory'>Inventories</a></li>
-            <li><a href="javascript:;" routerLink='/admin/account/master/unit'>Units</a></li>
+        <ul class="inner_sub_menu mt-10">
+            <ng-container *ngFor="let item of sideMenu;">
+                <li><a href="javascript:;"  matRipple [matRippleUnbounded]="false" [routerLink]='item.link' routerLinkActive="active">{{ item.key }}</a></li>
+            </ng-container>
         </ul>
     </mat-sidenav>
     <mat-sidenav-content>
