--- a/src/app/admin/account/ac-shared/ac-layout/ac-layout.component.scss
+++ b/src/app/admin/account/ac-shared/ac-layout/ac-layout.component.scss
@@ -8,6 +8,30 @@ mat-sidenav-container {
 
     & mat-sidenav {
         width: 180px;
+
+        & .inner_sub_menu {
+            list-style: none;
+            padding: 0;
+
+            & li {
+                & a {
+                    display: block;
+                    text-decoration: none;
+                    padding: 8px 20px;
+                    font-size: 1.4rem;
+                    color: rgba(46, 53, 142, 0.6);
+
+                    &:hover {
+                        color: rgba(46, 53, 142, 0.6);
+                    }
+
+                    &.active {
+                        color: #3f51b5;
+                        border-right: 2px solid #3f51b5;
+                    }
+                }
+            }
+        }
     }
 
     & mat-sidenav-content {
