--- a/src/app/admin/account/master/ledger-accounts/ledger-accounts.component.html
+++ b/src/app/admin/account/master/ledger-accounts/ledger-accounts.component.html
@@ -1,1 +1,121 @@
-<p>ledger-accounts works!</p>
+<div class="page_header d-flex mb-4">
+    <h2 class="header_title">Ledger Account</h2>
+    <div class="ml-auto">
+        <button mat-raised-button color="primary" type="button" class="sm_btn" (click)="addNewLedger()">Add New</button>
+    </div>
+</div>
+
+<div class="page_body" [formGroup]="form">
+    <div class="table-responsive">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>Type</td>
+                    <td class="ew-130">Opening Balance</td>
+                    <td class="ew-50">Tax(%)</td>
+                    <td class="ew-150">Description</td>
+                    <td class="ew-60">Status?</td>
+                    <td class="ew-70">Action</td>
+                </tr>
+            </thead>
+            <tbody>
+                <ng-container formArrayName="newLedgers">
+                    <tr *ngFor="let item of newLedgers['controls'];let i=index;" [formGroupName]="i" class="edit_table_row">
+                        <td class="inline_edit" [class.error]="!item.get('ledgerName').value">
+                            <input type="text" formControlName="ledgerName">
+                            <div class="error_spin">
+                                <mat-icon>bug_report</mat-icon>
+                            </div>
+                        </td>
+                        <td class="inline_edit" [class.error]="!item.get('accountType').value">
+                            <select formControlName="accountType">
+                                <option *ngFor="let item of ledgerAccountTypes;" [value]="item">{{ item }}</option>
+                            </select>
+                            <div class="error_spin">
+                                <mat-icon>bug_report</mat-icon>
+                            </div>
+                        </td>
+                        <td class="inline_edit" [class.error]="!item.get('openingBalance').value">
+                            <input type="text" formControlName="openingBalance">
+                            <div class="error_spin">
+                                <mat-icon>bug_report</mat-icon>
+                            </div>
+                        </td>
+                        <td class="inline_edit" [class.error]="!item.get('taxPercentage').value">
+                            <input type="text" formControlName="taxPercentage">
+                            <div class="error_spin">
+                                <mat-icon>bug_report</mat-icon>
+                            </div>
+                        </td>
+                        <td class="inline_edit">
+                            <input type="text" formControlName="description">
+                        </td>
+                        <td class="inline_edit">
+                            <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
+                        </td>
+                        <td>
+                            <button mat-icon-button color="primary" type="button" class="sm_btn mr-2" (click)="saveLedger(item, i)">
+                                <mat-icon>save</mat-icon>     
+                            </button>
+                            <button mat-icon-button color="warn" type="button" class="sm_btn" (click)="removeNewLedger(i)">
+                                <mat-icon>clear</mat-icon>     
+                            </button>
+                        </td>
+                    </tr>
+                </ng-container>
+                <ng-container formArrayName="ledgers">
+                    <tr *ngFor="let item of ledgers['controls'];let i=index;" [formGroupName]="i" [class.edit_table_row]="i == editIndex"  [class.read-only]="i != editIndex">
+                        
+                        <td class="inline_edit" [class.error]="!item.get('ledgerName').value">
+                            <input type="text" formControlName="ledgerName">
+                            <div class="error_spin">
+                                <mat-icon>bug_report</mat-icon>
+                            </div>
+                        </td>
+                        <td class="inline_edit" [class.error]="!item.get('accountType').value">
+                            <select formControlName="accountType">
+                                <option *ngFor="let item of ledgerAccountTypes;" [value]="item">{{ item }}</option>
+                            </select>
+                            <div class="error_spin">
+                                <mat-icon>bug_report</mat-icon>
+                            </div>
+                        </td>
+                        <td class="inline_edit" [class.error]="!item.get('openingBalance').value">
+                            <input type="text" formControlName="openingBalance">
+                            <div class="error_spin">
+                                <mat-icon>bug_report</mat-icon>
+                            </div>
+                        </td>
+                        <td class="inline_edit" [class.error]="!item.get('taxPercentage').value">
+                            <input type="text" formControlName="taxPercentage">
+                            <div class="error_spin">
+                                <mat-icon>bug_report</mat-icon>
+                            </div>
+                        </td>
+                        <td class="inline_edit">
+                            <input type="text" formControlName="description">
+                        </td>
+                        <td class="inline_edit">
+                            <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
+                        </td>
+                        <td class="action">
+                            <button mat-icon-button *ngIf="i != editIndex" color="primary" type="button" class="sm_btn mr-2" (click)="onEditClick(i)">
+                                <mat-icon>edit</mat-icon>     
+                            </button>
+                            <button mat-icon-button *ngIf="i == editIndex" color="primary" type="button" class="sm_btn mr-2" (click)="saveLedger(item)">
+                                <mat-icon>save</mat-icon>     
+                            </button>
+                            <button mat-icon-button color="warn" *ngIf="i == editIndex" type="button" class="sm_btn" (click)="editIndex=undefined;">
+                                <mat-icon>clear</mat-icon>     
+                            </button>
+                            <button mat-icon-button color="warn" *ngIf="i != editIndex" type="button" class="sm_btn" (click)="deleteLedger(i)">
+                                <mat-icon>delete</mat-icon>     
+                            </button>
+                        </td>
+                    </tr>
+                </ng-container>
+            </tbody>
+        </table>
+    </div>
+</div>
