--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -106,7 +106,7 @@
                             <div class="order_tableOuter">
                                 <h4 class="font-weight-600 mb-10 d-flex justify-content-between">
                                     Items
-                                    <button mat-raised-button color="primary" type="button" (click)="addAnotherItem()">Add New</button>
+                                    <button mat-raised-button color="primary" type="button" class="sm_btn" (click)="addAnotherItem()">Add New</button>
                                 </h4>
                                 <div class="table_outerWrapper table-responsive">
                                     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 w-100" formArrayName="items">
