--- a/src/app/admin/account/ac-shared/ac-layout/ac-layout.component.scss
+++ b/src/app/admin/account/ac-shared/ac-layout/ac-layout.component.scss
@@ -35,7 +35,7 @@ mat-sidenav-container {
     }
 
     & mat-sidenav-content {
-        padding: 15px;
+        padding: 7px 15px 15px;
 
         @media (max-width: 768px) {
             padding: 10px;
